[package]
name = "llvm-sys-wrapper"
version = "0.6.1"
authors = ["Jun Suzuki <jun.suzuki.japan@gmail.com>", "chronium chronium@users.noreply.github.com"]
repository = "https://github.com/chronium/llvm-sys-wrapper"
keywords = ["llvm"]
license-file = "LICENSE"
readme = "README.md"
description = "Shallow wrapper for llvm-sys."

[dependencies]
llvm-sys = "60"
libc = "0.2"
